--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -37,7 +37,7 @@ I acknowledge that everyone will work at different speeds today, so feel free to
 2. Upgrade R and R Studio
 3. Git installation and initialization
 4. Git GUI??
-5. Git - to - Github with R Studio: access
+5. Git - to - Github with R Studio
 6. Basic Git Commands
 
 
@@ -58,3 +58,41 @@ I acknowledge that everyone will work at different speeds today, so feel free to
 - R Studio is constantly adding improvements and updates, including a git interface.
 
 - To stay current, consider using the [Preview version](https://www.rstudio.com/products/rstudio/download/preview/) and updating every month or so.
+
+## Git installation and Git initialization
+
+- If you are lucky, git is already installed on your computer.
+
+- To check you have git, open the terminal or command line, and type `git --version`. In newer versions of R Studio there is a command line tab.
+
+- If `git --version` does not return an error, then you are in luck. Otherwise, git needs to be be [installed](https://happygitwithr.com/install-git.html).
+
+- If you have not already done so we need to initialize git with the following commands in the terminal:
+```
+git config --global user.name 'First Last'
+git config --global user.email 'who@montana.edu'
+```
+Note the email should correspond to the one you used to sign up for github.
+
+## Git GUI?
+
+- If you are leery of using the command line, consider downloading a git GUI.
+
+- Two options are options are:
+    - [gitkraken](https://www.gitkraken.com) and
+    - [github desktop](https://desktop.github.com)
+    
+- Also, know that R Studio has some built in features that simplify the git process too.
+
+## Git - to - Github with R Studio
+
+- Our goal is to work locally, in R Studio, and *push* updates to github.
+
+- First, go to your github page and create a new repo. To do this, 
+    - Repository name: git_demo
+    - Description: “practice with git”
+    - Select Public
+    - YES Initialize this repository with a README.
+    - Click: create repository.
+    
+- Next, we will clone this repo and create an R Studio project associated with it.
