--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -156,3 +156,6 @@ We will just cover a few basic commands for now, but the [github cheetsheet](htt
 
 Each query using the Google API costs 1/2 a cent, but Google gives $200 credit per month. Hence, unless you really, really like making maps *or have some looped code error*, costs will not be incurred. Furthermore, you can set up limits and notifications. Setting up a Google API does require a credit card.
 
+## Quiz 2
+
+We will not have a homework assignment this week, but quiz 2 will be due Tuesday January 22 [https://classroom.github.com/a/TuTt9k9Q](https://classroom.github.com/a/TuTt9k9Q).
