--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -158,4 +158,6 @@ Each query using the Google API costs 1/2 a cent, but Google gives $200 credit p
 
 ## Quiz 2
 
-We will not have a homework assignment this week, but quiz 2 will be due Tuesday January 22 [https://classroom.github.com/a/TuTt9k9Q](https://classroom.github.com/a/TuTt9k9Q).
+We will not have a homework assignment due this week, but quiz 2 will be due Tuesday January 22 [https://classroom.github.com/a/TuTt9k9Q](https://classroom.github.com/a/TuTt9k9Q).
+
+
